--- a/web/www/index.html
+++ b/web/www/index.html
@@ -58,7 +58,7 @@
       }
       </style>
 
-    <title>zecpaperwallet Web!</title>
+    <title>hushpaperwallet Web!</title>
   </head>
   <body>
     <script src="./bootstrap.js"></script>
@@ -66,7 +66,7 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <h1>ZecPaperWallet - Zcash Sapling Paper Wallet Generator</h1>
+          <h1>hushPaperWallet - Zcash Sapling Paper Wallet Generator</h1>
         </div>
       </div>
     </nav>
@@ -76,7 +76,7 @@
         <div class="alert alert-warning" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span>
-            For informational purposes only. For serious wallets, please run <a target="_blank" href="https://github.com/adityapk00/zecpaperwallet"><code>zecpaperwallet</code></a> offline on an air-gapped computer.
+            For informational purposes only. For serious wallets, please run <a target="_blank" href="https://github.com/MyHush/hushpaperwallet"><code>hushpaperwallet</code></a> offline on an air-gapped computer.
         </div>
       </div>
         
@@ -102,7 +102,7 @@
       <div class="row" style="padding-top: 10px;">
         <div class="col-sm-12">
           <div class="well">
-            Copyright &copy; 2019, ZecWallet.
+            Copyright &copy; 2020, ZecWallet, The Hush developers.
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">ZecPaperWallet - Configure Entropy</h4>
+            <h4 class="modal-title">hushPaperWallet - Configure Entropy</h4>
           </div>
           <div class="modal-body">
             <div class="form-group">
